WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88667
[Qt] [WK2] API tests randomly assert in WebLayerTreeRenderer::assignImageToLayer
https://bugs.webkit.org/show_bug.cgi?id=88667
Summary
[Qt] [WK2] API tests randomly assert in WebLayerTreeRenderer::assignImageToLayer
Viatcheslav Ostapenko
Reported
2012-06-08 10:24:46 PDT
ASSERTION FAILED: it != m_directlyCompositedImages.end() /Source/WebKit2/UIProcess/WebLayerTreeRenderer.cpp(356) : void WebKit::WebLayerTreeRenderer::assignImageToLayer(WebCore::GraphicsLayer*, int64_t) 1 0xb7a471b4 /usr/lib/libWebKit2.so.1(_ZN6WebKit20WebLayerTreeRenderer18assignImageToLayerEPN7WebCore13GraphicsLayerEx+0xee) [0xb7a471b4] 2 0xb7a4666d /usr/lib/libWebKit2.so.1(_ZN6WebKit20WebLayerTreeRenderer13setLayerStateEjRKNS_12WebLayerInfoE+0x351) [0xb7a4666d] 3 0xb79f3b00 /usr/lib/libWebKit2.so.1(_ZN3WTF15FunctionWrapperIMN6WebKit20WebLayerTreeRendererEFvjRKNS1_12WebLayerInfoEEEclEPS2_jS5_+0x54) [0xb79f3b00] 4 0xb79f32e0 /usr/lib/libWebKit2.so.1(_ZN3WTF17BoundFunctionImplINS_15FunctionWrapperIMN6WebKit20WebLayerTreeRendererEFvjRKNS2_12WebLayerInfoEEEEFvPS3_jS4_EEclEv+0x60) [0xb79f32e0] 5 0xb7a47dec /usr/lib/libWebKit2.so.1(_ZNK3WTF8FunctionIFvvEEclEv+0x7e) [0xb7a47dec] 6 0xb7a476b1 /usr/lib/libWebKit2.so.1(_ZN6WebKit20WebLayerTreeRenderer17syncRemoteContentEv+0x45) [0xb7a476b1] 7 0xb79c4e9f /usr/lib/libWebKit2.so.1(_ZN13QQuickWebPage15updatePaintNodeEP7QSGNodePN10QQuickItem19UpdatePaintNodeDataE+0x129) [0xb79c4e9f] 8 0xb07f8d05 /usr/lib/libQtQuick.so.5(_ZN19QQuickCanvasPrivate15updateDirtyNodeEP10QQuickItem+0xf65) [0xb07f8d05] 9 0xb07fc6b7 /usr/lib/libQtQuick.so.5(_ZN19QQuickCanvasPrivate16updateDirtyNodesEv+0x57) [0xb07fc6b7] 10 0xb07fc71b /usr/lib/libQtQuick.so.5(_ZN19QQuickCanvasPrivate14syncSceneGraphEv+0x4b) [0xb07fc71b] 11 0xb09053cc /usr/lib/libQtQuick.so.5(+0x23d3cc) [0xb09053cc] 12 0xaeb613d9 /usr/lib/libQtCore.so.5(+0x6c3d9) [0xaeb613d9] 13 0xaead7bee /lib/libpthread.so.0(+0x5bee) [0xaead7bee] 14 0xae911a6e /lib/libc.so.6(clone+0x5e) [0xae911a6e]
Attachments
Patch
(2.93 KB, patch)
2012-06-08 10:42 PDT
,
Viatcheslav Ostapenko
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Viatcheslav Ostapenko
Comment 1
2012-06-08 10:42:57 PDT
Created
attachment 146600
[details]
Patch
WebKit Review Bot
Comment 2
2012-06-08 11:34:31 PDT
Comment on
attachment 146600
[details]
Patch Clearing flags on attachment: 146600 Committed
r119847
: <
http://trac.webkit.org/changeset/119847
>
WebKit Review Bot
Comment 3
2012-06-08 11:34:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug