[Qt] [WK2] API tests randomly assert in WebLayerTreeRenderer::assignImageToLayer https://bugs.webkit.org/show_bug.cgi?id=88667

Reviewed by Noam Rosenthal.

Move deactivation of WebLayerTreeRenderer from LayerTreeHostProxy::purgeBackingStores
to WebLayerTreeRenderer::purgeGLResources. LayerTreeHostProxy::purgeBackingStores is
invoked on main thread after going through call gate and it is too late to deactivate
renderer here, because some update messages are able to go through.
WebLayerTreeRenderer::purgeGLResources is called directly from render node deallocation
and it is right place to deactivate renderer.

* UIProcess/LayerTreeHostProxy.cpp:
(WebKit::LayerTreeHostProxy::purgeBackingStores):
* UIProcess/WebLayerTreeRenderer.cpp:
(WebKit::WebLayerTreeRenderer::purgeGLResources):


Canonical link: https://commits.webkit.org/106483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119847 268f45cc-cd09-0410-ab3c-d52691b4dbfc